k8s-yaml/monitoring/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus-k8s
  name: prometheus-k8s
  annotations:
    prometheus.io/scrape: 'true'  
  namespace: monitoring
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
    app: prometheus-k8s
  sessionAffinity: ClientIP
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-operated
  namespace: monitoring
spec:
  ports:
    - name: web
      protocol: TCP
      port: 9090
      targetPort: web
  selector:
    app: prometheus-k8s
  clusterIP: None
  type: ClusterIP
  sessionAffinity: None
