k8s-yaml/monitoring/prometheus/prometheus-Ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`prometheus.tycng.com`)
    kind: Rule
    services:
    - name: prometheus-k8s
      port: 9090
      sticky:
        cookie:
          httpOnly: true
          name: cookie
          secure: true
          sameSite: none
      passHostHeader: true
      responseForwarding:
        flushInterval: 100ms
